--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,11 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=${DB_USER}
 spring.rabbitmq.password=${DB_PASSWORD}
 spring.rabbitmq.listener.simple.auto-startup=true
+
+
+spring.security.user.name=${PURIBOT_ADMIN_USER}
+spring.security.user.password=${PURIBOT_ADMIN_PASSWORD}
+
+# Limpeza de Log
+spring.main.banner-mode=console
+logging.level.org.springframework.security=INFO
