--- a/pom.xml
+++ b/pom.xml
@@ -31,9 +31,9 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>com.google.cloud</groupId>
-			<artifactId>google-cloud-vertexai</artifactId>
-			<version>1.1.0</version>
+			<groupId>dev.langchain4j</groupId>
+			<artifactId>langchain4j-google-ai-gemini</artifactId>
+			<version>1.0.0-beta1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
