feat:criação de puribotRabbitErrorHandler

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-
 gemini.api.key=${GEMINI_API_KEY}
 
 spring.rabbitmq.host=localhost
@@ -17,7 +16,7 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=${DB_USER}
 spring.rabbitmq.password=${DB_PASSWORD}
 spring.rabbitmq.listener.simple.auto-startup=true
-
+logging.level.org.springframework.amqp.rabbit.listener=DEBUG
 
 spring.security.user.name=${PURIBOT_ADMIN_USER}
 spring.security.user.password=${PURIBOT_ADMIN_PASSWORD}
