feat:criacao de DTOS e conexao com banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ai-core
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/${DB_NAME}
+spring.datasource.url=jdbc:postgresql://localhost:5432/puribot_db
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -24,3 +24,6 @@ spring.security.user.password=${PURIBOT_ADMIN_PASSWORD}
 # Limpeza de Log
 spring.main.banner-mode=console
 logging.level.org.springframework.security=INFO
+
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
